--- a/data/meson.build
+++ b/data/meson.build
@@ -7,6 +7,11 @@ desktop_file = i18n.merge_file(
   install_dir: join_paths(get_option('datadir'), 'applications')
 )
 
+install_data(
+    ['me.appadeia.Taigo.svg', 'me.appadeia.Taigo-symbolic.svg'],
+    install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps')
+)
+
 desktop_utils = find_program('desktop-file-validate', required: false)
 if desktop_utils.found()
   test('Validate desktop file', desktop_utils,
