--- a/src/meson.build
+++ b/src/meson.build
@@ -8,6 +8,7 @@ taigo_deps = [
   dependency('gio-2.0', version: '>= 2.50'),
   dependency('gtk+-3.0', version: '>= 3.22'),
   dependency('gee-0.8'),
+  dependency('json-glib-1.0'),
 ]
 
 gnome = import('gnome')
