--- a/data/me.appadeia.Taigo.appdata.xml.in
+++ b/data/me.appadeia.Taigo.appdata.xml.in
@@ -28,23 +28,23 @@
 	</releases>
 	<screenshots>
 		<screenshot>
-			<caption>Home view of Taigo.</caption>
+			<caption>Home view of Taigo</caption>
 			<image type="source">https://raw.githubusercontent.com/Appadeia/taigo/master/data/screenshots/home.png</image>
 		</screenshot>
 		<screenshot>
-			<caption>Status view of Taigo.</caption>
+			<caption>Status view of Taigo</caption>
 			<image type="source">https://raw.githubusercontent.com/Appadeia/taigo/master/data/screenshots/status.png</image>
 		</screenshot>
 		<screenshot>
-			<caption>Food view of Taigo.</caption>
+			<caption>Food view of Taigo</caption>
 			<image type="source">https://raw.githubusercontent.com/Appadeia/taigo/master/data/screenshots/food.png</image>
 		</screenshot>
 		<screenshot>
-			<caption>Left or Right view of Taigo.</caption>
+			<caption>Left or Right view of Taigo</caption>
 			<image type="source">https://raw.githubusercontent.com/Appadeia/taigo/master/data/screenshots/left-or-right.png</image>
 		</screenshot>
 		<screenshot>
-			<caption>Taigo complaining.</caption>
+			<caption>Taigo complaining</caption>
 			<image type="source">https://raw.githubusercontent.com/Appadeia/taigo/master/data/screenshots/complaining.png</image>
 		</screenshot>
 		<content_rating type="oars-1.1" />
