--- a/data/me.appadeia.Taigo.appdata.xml.in
+++ b/data/me.appadeia.Taigo.appdata.xml.in
@@ -6,7 +6,7 @@
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
 	<summary>Taigo is a virtual pet for your desktop</summary>
-	<url>https://github.com/appadeia/taigo</url>
+	<url type="homepage">https://github.com/appadeia/taigo</url>
 	<description>
 		<p>
 			Taigo is a virtual pet for your desktop that you need to take care of.
