--- a/data/com.github.appadeia.Taigo.appdata.xml.in
+++ b/data/com.github.appadeia.Taigo.appdata.xml.in
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-	<icon type="remote" width="128" height="128">https://raw.githubusercontent.com/Appadeia/taigo/master/data/me.appadeia.Taigo.svg</icon>
+	<icon type="remote" width="128" height="128">https://raw.githubusercontent.com/Appadeia/taigo/master/data/com.github.appadeia.Taigo.svg</icon>
 	<name>Taigo</name>
-	<id>me.appadeia.Taigo.desktop</id>
+	<id>com.github.appadeia.Taigo.desktop</id>
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
 	<summary>Taigo is a virtual pet for your desktop</summary>
