--- a/me.appadeia.Taigo.json
+++ b/me.appadeia.Taigo.json
@@ -1,5 +1,5 @@
 {
-    "app-id": "me.appadeia.Taigo",
+    "app-id": "com.github.appadeia.Taigo",
     "runtime": "org.gnome.Platform",
     "runtime-version": "3.32",
     "sdk": "org.gnome.Sdk",
